[package]
name = "server_rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server_rust"
path = "server_rust.rs"

[[bin]]
name = "server_rust_basic"
path = "server_rust_basic.rs"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
